:recycle: added auth to the api request with discriminators
