# fastapi-master-api/app/api/models/base_adapter.py
@@ -7,25 +7,22 @@ from datetime import date, datetime  # noqa: F401
 from typing import Any, Dict, List, Optional  # noqa: F401
 
 from app.api.models.adapter_enums import AdapterEnums
-from app.api.models.create_bearer_token_adapter import CreateBearerTokenAdapter
 from pydantic import AnyUrl, BaseModel, EmailStr, validator  # noqa: F401
 
 
-class CreateAdapter(BaseModel):
+class BaseAdapter(BaseModel):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
 
-    CreateAdapter - a model defined in OpenAPI
+    BaseAdapter - a model defined in OpenAPI
 
-        adapter_name: The adapter_name of this CreateAdapter [Optional].
-        cron_expression: The cron_expression of this CreateAdapter.
-        bearer_token: The bearer_token of this CreateAdapter.
+        adapter_name: The adapter_name of this BaseAdapter [Optional].
+        cron_expression: The cron_expression of this BaseAdapter.
     """
 
     adapter_name: Optional[AdapterEnums] = None
     cron_expression: str
-    bearer_token: str
 
 
-CreateAdapter.update_forward_refs()
+BaseAdapter.update_forward_refs()
