# fastapi-master-api/app/api/models/bearer_token.py
@@ -1,0 +1,25 @@
+# coding: utf-8
+
+from __future__ import annotations
+
+import re  # noqa: F401
+from datetime import date, datetime  # noqa: F401
+from typing import Any, Dict, List, Optional  # noqa: F401
+
+from pydantic import AnyUrl, BaseModel, EmailStr, validator  # noqa: F401
+
+
+class BearerToken(BaseModel):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+
+    BearerToken - a model defined in OpenAPI
+
+        bearer_token: The bearer_token of this BearerToken.
+    """
+
+    bearer_token: str
+
+
+BearerToken.update_forward_refs()
