# fastapi-master-api/app/api/models/create_bearer_token_adapter.py
@@ -7,20 +7,21 @@ from datetime import date, datetime  # noqa: F401
 from typing import Any, Dict, List, Optional  # noqa: F401
 
 from app.api.models.adapter_enums import AdapterEnums
-from app.api.models.create_bearer_token_adapter import CreateBearerTokenAdapter
+from app.api.models.base_adapter import BaseAdapter
+from app.api.models.bearer_token import BearerToken
 from pydantic import AnyUrl, BaseModel, EmailStr, validator  # noqa: F401
 
 
-class CreateAdapter(BaseModel):
+class CreateBearerTokenAdapter(BaseModel):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
 
-    CreateAdapter - a model defined in OpenAPI
+    CreateBearerTokenAdapter - a model defined in OpenAPI
 
-        adapter_name: The adapter_name of this CreateAdapter [Optional].
-        cron_expression: The cron_expression of this CreateAdapter.
-        bearer_token: The bearer_token of this CreateAdapter.
+        adapter_name: The adapter_name of this CreateBearerTokenAdapter [Optional].
+        cron_expression: The cron_expression of this CreateBearerTokenAdapter.
+        bearer_token: The bearer_token of this CreateBearerTokenAdapter.
     """
 
     adapter_name: Optional[AdapterEnums] = None
@@ -28,4 +29,4 @@ class CreateAdapter(BaseModel):
     bearer_token: str
 
 
-CreateAdapter.update_forward_refs()
+CreateBearerTokenAdapter.update_forward_refs()
